fixed spacing

--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -3,8 +3,6 @@ body {
     padding: 0;
     font-family: "Source Sans 3", sans-serif;
     color: white;
-    text-align: center;
-    align-items: center;
 }
 header {
     background-image: url('images/pic_1.jpg');
@@ -24,14 +22,12 @@ nav {
     width: 232px;
     display: flex;
     justify-content: space-between;
-    margin: auto;
 }
 
 a {
     text-decoration: none;
     color: white;
     font-weight: 700;
-    margin: auto;
 }
 
 .title-container {
